[project]
name = "survey-kit-data"
version = "0.1.2"
description = "Tools for working with survey and other data"
readme = "README.md"
requires-python = ">=3.9"

license = {text = "CC0 1.0 Universal"}
authors = [
    {name = "Jon Rothbaum", email = "jon.rothbaum@gmail.com"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "census>=0.8.24",
    "load-dotenv>=0.1.0",
    "polars>=1.23.2",
    "polars-readstat>=0.8.2",
    "pooch>=1.8.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py39"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
    "survey-kit>=0.1.2",
    "us>=3.2.0",
]
